# BatXRat

./: .gitignore  Bat.sln  Bat.vcxproj  CMakeLists.txt  build.bat  doc.txt  main.cpp  run.bat  ssh.cpp
.github/workflows/: build.yml
playit/: .gitignore  Cargo.toml
playit/src/: lib.rs  main.rs
x64/Debug/: Bat.exe.recipe
x64/Debug/Bat.tlog/: Bat.lastbuildstate
