[workspace]

[package]
name = "test-agent"
version = "0.1.0"
edition = "2021"

[lib]
name = "test_agent"
crate-type = ["staticlib"]

[dependencies]
tokio = { version = "1.39", features = ["full"] }
tokio-util = "0.7.14"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"
hex = "0.4.3"
toml = "0.8.19"
uuid = { version = "1.10", features = ["serde"] }
byteorder = "1.5"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
message-encoding = "0.2.2"
dirs = "5.0.1"
clap = { version = "4.5", features = ["derive"] }
urlencoding = "2.1"
serde_yaml = "0.9"
crossterm = "0.28"
dotenv = "0.15.0"

playit-agent-core = { path = "../packages/agent_core" }
playit-agent-proto = { path = "../packages/agent_proto" }
playit-api-client = { path = "../packages/api_client" }
